fix: add word-wrap to task-content class

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -166,6 +166,8 @@ hr {
 
 .task-content {
   margin: 0px 10px 10px;
+  width: 95%;
+  word-wrap: break-word;
 }
 
 .task-footer {
